--- a/02-snake/index.html
+++ b/02-snake/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Jeu du Serpent</title>
-        <script type="module" src="./script.js"></script>
+        <script src="dist/bundle.js"></script>
     </head>
     <body>
     </body>
